# mixed-logit-wtp

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
docs/: dashboard.html  methodology.md
python/: pyproject.toml
python/mixedlogit/: __init__.py  dgp.py  elasticity.py  export_csv.py  halton.py  mnl.py  mxl.py  wtp.py
python/notebooks/: 01_dgp_and_mnl_baseline.ipynb  02_mixed_logit_estimation.ipynb  03_elasticities_and_substitution.ipynb  04_wtp_and_feature_preference.ipynb  _build_01.py  _build_02.py  _build_03.py  _build_04.py
python/scripts/: export_results.py  render_dashboard.py  render_figures.py
python/tests/: test_dgp.py  test_elasticity.py  test_halton.py  test_mnl.py  test_mxl.py  test_wtp.py
r/: DESCRIPTION  LICENSE  NAMESPACE  README.md
r/R/: data.R  elasticity.R  estimate.R  parity.R  wtp.R
r/data/: ground_truth.json  python_mnl_results.json  python_mxl_results.json  synthetic_choices.csv
r/tests/: testthat.R
r/tests/testthat/: helper-source.R  test-data.R  test-elasticity-wtp.R  test-parity.R
r/vignettes/: mxl-walkthrough.Rmd
